[FIX] runbot_merge: staging squares vertical alignment
`center` is only supported for firefox, so use the closest (but worse)
`bottom` for chrome and safari.

--- a/runbot_merge/static/src/runbot_merge.css
+++ b/runbot_merge/static/src/runbot_merge.css
@@ -472,7 +472,11 @@ h2.ministate {
     margin-left: 1ex;
     display: inline-flex;
     flex-wrap: wrap;
-    vertical-align: center;
+    vertical-align: bottom;
+    /* better, but only in Firefox */
+    @supports (vertical-align: center) {
+        vertical-align: center;
+    }
     gap: 1ex;
     &>div {
         display: grid;
